--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@
   .content-table th,
   .content-table td {
     padding: 12px 15px;
+    text-align: center;
   }
   
   .content-table tbody tr {
