Se agregó el escudo y nombre de cada club

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,7 @@
   .content-table td {
     padding: 12px 15px;
     text-align: center;
+    text-transform: uppercase;
   }
   
   .content-table tbody tr {
