--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,18 +24,12 @@
     padding: 12px 15px;
     text-align: center;
     text-transform: uppercase;
+    vertical-align: middle;
   }
   
-  .content-table tbody tr {
-    border-bottom: 1px solid #dddddd;
-  }
-  
+ 
   .content-table tbody tr:nth-of-type(even) {
     background-color: #f3f3f3;
-  }
-  
-  .content-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
   }
   
   .content-table tbody tr.active-row {
@@ -46,4 +40,24 @@
   h3 {
     font-family: 'Source Sans Pro', sans-serif;
   }
+
+  .top4 {
+    border: 3px solid rgb(24, 114, 24);
+  }
+
+  .last4 {
+    border: 3px solid rgb(194, 33, 33);
+  }
+
+  .halfTable {
+    border: 3px solid rgb(119, 124, 119);
+  }
+
+  .logoLiga {
+
+    width: 100px;
+    height: auto;
+
+  }
+
 
