--- a/views/tablaAnual.hbs
+++ b/views/tablaAnual.hbs
@@ -16,7 +16,7 @@
         </tr>
       </thead>
      
-      {{#each teams}}
+      {{#each stats}}
       <tr class= {{colorXpos this.pos}}>
         <td>{{this.pos}}</td>
         <td><img class="float-left" width="50" height="50" src={{this.escudo}} alt={{this.abr}}> <p>{{this.nombreClub}}</p>
