--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,16 +1,9 @@
-<div class="jumbotron">
 
-
-  <div class=""> 
-    <h1 class="display 4">Proyecto Tabla Anual Campeonato Uruguayo </h1> <img class="logoLiga img-fluid" src="img/logoLiga.png"
-      alt="Logo de la Liga">
-  </div>
-
-  <hr class="my-4">
-  <p>El objetivo de este sitio es tomar los datos scrapeados con NodeJS/cheerio de la base de datos donde fueron
-    guardados.
-    Luego se renderiza una vista con estos datos mostrando una tabla mediante el request /anual</p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="/anual" role="button">Ver Tabla</a>
+<header id="home">
+  <h1>Proyecto Tabla Anual Campeonato Uruguayo </h1>
+  <p>
+    El objetivo de este proyecto es scrapear los datos de una tabla de posiciones del
+    Campeonato uruguayo que serán procesados en una nueva tabla disponible aqui:
   </p>
-</div>
+  <a href="/anual" class="button">Ir a Tabla Anual</a>
+</header>
